Many changes: - Update mongodb equivs to reflect use of mongodb 7 - Add tests - Create github workflows to build/autoupdate/test (see README for details) - Create entrypoint script